--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
     <application android:icon="@drawable/app_music"
+        android:name=".simple.PlayerApplication"
         android:label="@string/musicbrowserlabel"
         android:taskAffinity="android.task.music"
         android:allowTaskReparenting="true">
@@ -35,8 +36,7 @@
             android:name="android.app.default_searchable"
             android:value="com.android.music.QueryBrowserActivity"
         />
-        <activity android:name="com.android.music.MusicBrowserActivity"
-            android:theme="@android:style/Theme.NoTitleBar"
+        <activity android:name=".simple.presentation.NowPlayingActivity"
             android:exported="true"
         >
             <intent-filter>
@@ -47,6 +47,8 @@
                 <category android:name="android.intent.category.APP_MUSIC" />
             </intent-filter>
         </activity>
+        <service android:name=".simple.model.PlayerService"
+            android:exported="false" />
         <receiver android:name="com.android.music.MediaButtonIntentReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
